# ghissue2discord

./: .gitignore  Dockerfile  README.md  deploy.sh  pyproject.toml
app/: main.py  payload.json
tests/: issue_close.json  issue_open.json  run_tests.py
